Alteração IOUtils